Fix popup visibility in tracks table

--- a/packages/front/src/Tracks.css
+++ b/packages/front/src/Tracks.css
@@ -84,7 +84,6 @@
 .tracks-table {
   border-collapse: collapse;
   font-size: 75%;
-  overflow: scroll;
   position: absolute;
   top: 0;
   bottom: 0;
